syntax = "proto3";

option csharp_namespace = "GrpcServiceProjects.Advanced";

package greet;

// The greeting service definition.
service Greeter {
  // Sends a greeting
  rpc SayHello (HelloRequest) returns (HelloReply);
  rpc Greet_With_Deadline (GreetingRequest) returns (Greetingresponse) {}
}

// The request message containing the user's name.
message HelloRequest {
  string name = 1;
}

// The response message containing the greetings.
message HelloReply {
  string message = 1;
}

 

message GreetingRequest {
	string name = 1;
}

message Greetingresponse {
	string result = 1;
}

 